--- a/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
+{% extends "paginas/plantilla.html" %}
+{% load static %}
+{% block content %}
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <title>Bienvenidos</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-
-    </head>
-
-    <body>
         <div class="p-5 mb-5 bg-light rounded-3">
             <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold">Bienvenidos a la Bolsa de Empleo Para la Equidad Laboral (B.E.E.L.)</h1>
@@ -37,7 +24,6 @@
                 href="{% url 'formularioEmpresa' %}"
                 role="button"
                 >Registrate como empresa</a"
-                
                 ></a>
     
                 <a
@@ -60,16 +46,5 @@
             </div>
         </div>
 
-        <footer class="footer mt-auto py-3 bg-secondary bg-gradient text-white mt-6">
-            <div class="container"> 
-              <span>&copy; 2024 Bolsa de Empleo Para la Equidad Laboral (B.E.E.L.) Todos los derechos reservados.</span>
-              <a href="#" class="float-right">Enlace a otra página</a>
-            </div>
-        </footer>
-        
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    </body> 
-</html>
+{% endblock %}
