--- a/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
@@ -2,57 +2,68 @@
 {% load static %}
 {% block content %}
 
-<div class="card text-start">
-    <div class="card-body">
-        <h4 class="card-title">Formulario de registro</h4>
-        <p class="card-text">Ingresa tus datos:</p>
 
-        <form enctype="multipart/form-data" method="post">
-            {% csrf_token %}
-            <label for="nombres">Nombres:</label>
-            <input type="text" name="nombre_usuario" required>
-        
-            <label for="apellidos">Apellidos:</label>
-            <input type="text" name="nombre" required>
-        
-            <label for="cedula">Cédula:</label>
-            <input type="number" name="apellidos" required>
-        
-            <label for="fecha_nacimiento">Fecha de nacimiento:</label>
-            <input type="date" name="email" required>
-        
-            <label for="celular">Celular:</label>
-            <input type="number" name="edad" required>
-        
-            <label for="correo">Correo:</label>
-            <input type="email" name="peso" required>
-        
-            <label for="direccion">Dirección:</label>
-            <input type="address" name="direccion" required>
-        
-            <label for="descripcionDiscapacidad">Descripción de discapacidad:</label>
-            <input type="text" name="descripcionDiscapacidad" required>
-    
-            <label for="contrasena">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-            <button id="togglePassword">Ver contraseña</button>
-            
-            <label for="confirmacion_contrasena">Confirmar contraseña:</label>
-            <input type="password" name="confirmacion_contrasena" required>
-            
-    
-            <input type="submit" value="Enviar">
-            <a
-                name=""
-                id=""
-                class="btn btn-success bg-gradient btn-lg"
-                href="{% url 'index' %}"
-                role="button"
-                >Regresar</a"
-            ></a>
-        </form>
-    </div>
-</div>
+<div class="container">
+  <div class="card text-start mx-auto" style="width: 30rem;">
+      <div class="card-body">
+          <h4 class="card-title">Formulario de registro</h4>
+          <p class="card-text">Ingresa tus datos:</p>
+
+          <form enctype="multipart/form-data" method="post">
+              <link rel="stylesheet" href="{% static 'css/form.css' %}">
+
+              {% csrf_token %}
+              <label for="nombres">Nombres:</label>
+              <input type="text" name="nombre_usuario" required>
+          
+              <label for="apellidos">Apellidos:</label>
+              <input type="text" name="nombre" required>
+          
+              <label for="cedula">Cédula:</label>
+              <input type="number" name="apellidos" required>
+          
+              <label for="fecha_nacimiento">Fecha de nacimiento:</label>
+              <input type="date" name="email" required>
+          
+              <label for="celular">Celular:</label>
+              <input type="number" name="edad" required>
+          
+              <label for="correo">Correo:</label>
+              <input type="email" name="peso" required>
+          
+              <label for="direccion">Dirección:</label>
+              <input type="address" name="direccion" required>
+          
+              <label for="descripcionDiscapacidad">Descripción de discapacidad:</label>
+              <input type="text" name="descripcionDiscapacidad" required>
+      
+              <label for="contrasena">Contraseña:</label>
+              <input type="password" id="password" name="password" required>
+              <button id="togglePassword">Ver contraseña</button>
+              
+              <label for="confirmacion_contrasena">Confirmar contraseña:</label>
+              <input type="password" name="confirmacion_contrasena" required>
+              
+      
+              <a
+                  name=""
+                  id=""
+                  class="btn btn-primary bg-gradient btn-lg"
+                  href="{% url 'index' %}"
+                  role="button"
+                  >Enviar</a"
+              ></a>
+              <a
+                  name=""
+                  id=""
+                  class="btn btn-success bg-gradient btn-lg"
+                  href="{% url 'index' %}"
+                  role="button"
+                  >Regresar</a"
+              ></a>
+          </form>
+      </div>
+  </div>
 
     
         <script>
@@ -71,4 +82,6 @@
           </script>
 
     </form>
+
+</div>
 {% endblock %}
