Update 4/06/2024 1.4 footer fijado al pie de página/ Formulario cambiado y con estilos / nueva vista sobre nosotros con su respectiva plantilla

--- a/BEEL/Sistema_autenticacion_registro/static/css/footer.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/footer.css
@@ -14,10 +14,10 @@
  }
  
  .footer{
-     position: relative;
+     position: fixed;
+     bottom: 0;
      width: 100%;
      background: #117e7e;
-     min-height: 100px;
      padding: 20px 50px;
      display: flex;
      justify-content: below;
