--- a/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-        <div class="p-5 mb-5 bg-light rounded-3">
+        <div class="p-5 mb-5  rounded-3">
             <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold">Bienvenidos a la Bolsa de Empleo Para la Equidad Laboral (B.E.E.L.)</h1>
                 <p class="col-md-8 fs-4">
