--- a/BEEL/Sistema_autenticacion_registro/templates/paginas/plantilla.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/paginas/plantilla.html
@@ -28,7 +28,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a name="inicio" href="{% url 'index' %}">Inicio</a></li>
-                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="{% url 'aboutus' %}">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
