--- a/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
@@ -63,6 +63,12 @@
               <label for="confirmacion_contrasena">Confirmar contraseña</label>
               <input type="password" name="confirmacion_contrasena" required>
               </ol>
+
+              <ol>
+                <label for="nacionalidad">Nacionalidad</label>
+                <input type="text" name="nacionalidad" required>
+              </ol>
+
       
               <a
                   name=""
