--- a/BEEL/Sistema_autenticacion_registro/templates/paginas/login.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/paginas/login.html
@@ -1,13 +1,31 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar sesión</title>
+    <title>B.E.E.L</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
-    
-    
-
+    <div class="formulario">
+        <h1>Inicio de sesión</h1>
+        <form method="post=">
+            <div class="username">
+                <input type="text" required>
+                <label>nombre de usuario</label>
+            </div>
+            <div class="username">
+                <input type="password" required>
+                <label>contraseña</label>
+            </div>
+            <div class="recordar">¿olvidó su contraseña?</div>
+            <input type="submit" value="iniciar sesion">
+            <div class="registrar">
+                ¿no tienes una cuenta?<a href="#"> Regístrate</a>
+            </div>
+        </form>
 </body>
 </html>
