--- a/BEEL/Sistema_autenticacion_registro/static/css/footer.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/footer.css
@@ -14,14 +14,15 @@
  }
  
  .footer{
-     bottom: 0;
-     width: 100%;
-     background: #117e7e;
-     min-height: 100px;
-     padding: 20px 50px;
-     display: flex;
-     justify-content: below;
-     align-items: column;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: #117e7e;
+    min-height: 100px;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: below;
+    align-items: column;
  }
 
 .social-icon{
