--- a/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="container mb-5 mt-5">
+<div class="container mb-5 mt-5" id="container">
   <div class="card text-start mx-auto" style="width: 30rem;">
       <div class="card-body">
           <h4 class="card-title">Formulario de registro</h4>
