--- a/BEEL/Sistema_autenticacion_registro/static/css/footer.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/footer.css
@@ -5,22 +5,25 @@
     font-family: sans-serif; 
  }
  
-body{
-    /* display: flex;
-    justify-content: flex-end;
-    align-items: flex-end; */
-    min-height: 100vh;
-    background-color: white;
+ body{
+     /* display: flex;
+     justify-content: flex-end;
+     align-items: flex-end; */
+     min-height: 100vh;
+     background-color: white;
  }
  
-.footer{
+ .footer{
+    position: fixed;
     bottom: 0;
     width: 100%;
     background: #117e7e;
+    min-height: 100px;
+    padding: 20px 50px;
     display: flex;
     justify-content: below;
     align-items: column;
-}
+ }
 
 .social-icon{
     display: flex;
