--- a/BEEL/Sistema_autenticacion_registro/static/css/footer.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/footer.css
@@ -17,7 +17,7 @@
      position: fixed;
      bottom: 0;
      width: 100%;
-     background: #117e7e;
+     background: #333333;
      padding: 20px 50px;
      display: flex;
      justify-content: below;
