--- a/BEEL/Sistema_autenticacion_registro/static/css/footer.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/footer.css
@@ -13,12 +13,12 @@
      background-color: white;
  }
  
- .footer{
+.footer{
      bottom: 0;
      width: 100%;
-     background: #117e7e;
+     background: #333333;
      min-height: 100px;
-     padding: 20px 50px;
+     padding: 20px 250px;
      display: flex;
      justify-content: below;
      align-items: column;
