--- a/BEEL/Sistema_autenticacion_registro/static/css/login.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/login.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(rgba(8, 56, 56, 0.65), rgba(5, 41, 44, 0.65)), url(/static/img/fondo.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -16,19 +15,19 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    background: #117e7e;
+    background: #38ba9c;
     border-radius: 10px;
 
 }
 
 .formulario h1{
     text-align: center;
-    padding: 0 0 20px 0;
+    padding: 0 0 15px 0;
     border-bottom: 1px solid black;
 }
 
 .formulario form{
-    padding: 0 40px;
+    padding: 0 50px;
     box-sizing: border-box;
 }
 
@@ -95,7 +94,7 @@ input[type="submit"]{
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: #072e2e;
+    background: #000000;
     border-radius: 25px;
     font-size: 18px;
     color: white;
@@ -117,10 +116,12 @@ input[type="submit"]:hover{
 } 
 
 .registrar a{
-    color: black;
+    color: #e1ff00;
     text-decoration: none;
 }
 
 .registrar a:hover{
     text-decoration: underline;
 }
+
+
