--- a/BEEL/Sistema_autenticacion_registro/static/css/login.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/login.css
@@ -82,7 +82,7 @@ form .username{
 
 .recordar{
     margin: -5px 0 20px 5px;
-    color: black;
+    color: #104500;
     cursor: pointer;
 }
 
@@ -112,11 +112,11 @@ input[type="submit"]:hover{
     margin: 30px 0;
     text-align: center;
     font-size: 16px;
-    color: black;
+    color: #104500;
 } 
 
 .registrar a{
-    color: #e1ff00;
+    color: #e4ff16;
     text-decoration: none;
 }
 
