--- a/BEEL/home/templates/home/welcome.html
+++ b/BEEL/home/templates/home/welcome.html
@@ -14,10 +14,9 @@
       <div class="logo">
         <a href="/"><img src="{% static 'img/logo_home.jpg' %}" width="80px" height="80px"></a>
         <span>Equidad Laboral</span>
-    </div>
+     </div>
     
-        <ul>
-
+       <ul>
             <li><a href="{% url 'welcome' %}">Inicio</a></li>
             <li><a href="/about">Acerca de</a></li>
             <li><a href="{% url 'login' %}">Inicia Sesion</a></li>
@@ -54,7 +53,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Bolsa de Empleo para Personas Discapacitadas. Todos los derechos reservados.</p>
+      <p class="text">&copy; 2024 Bolsa de Empleo para Personas Discapacitadas. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
