update 12/06/2024 estilos añadidos al formulario de postulante

--- a/BEEL/Sistema_autenticacion_registro/templates/empresas/formulario.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/empresas/formulario.html
@@ -10,7 +10,7 @@
             <p class="card-text">Ingresa tus datos:</p>
   
             <form enctype="multipart/form-data" method="post">
-                <link rel="stylesheet" href="{% static 'css/form.css' %}">
+                <link rel="stylesheet" href="{% static 'css/formE.css' %}">
   
                 {% csrf_token %}
                 {{ form }}
