--- a/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% block content %}
 
-
 <div class="container mb-5 mt-5" id="container">
   <div class="card text-start mx-auto" style="width: 30rem;">
       <div class="card-body">
@@ -10,29 +9,27 @@
           <p class="card-text">Ingresa tus datos:</p>
 
           <form enctype="multipart/form-data" method="post">
-              <link rel="stylesheet" href="{% static 'css/form.css' %}">
+            <link rel="stylesheet" href="{% static 'css/formP.css' %}">
 
-              {% csrf_token %}
-              {{ form }}
+            {% csrf_token %}
+            {{ form }}
             
-
-      
-              <a
-                  name=""
-                  id=""
-                  class="btn btn-primary bg-gradient btn-lg"
-                  href="{% url 'index' %}"
-                  role="button"
-                  >Enviar</a"
-              ></a>
-              <a
-                  name=""
-                  id=""
-                  class="btn btn-success bg-gradient btn-lg"
-                  href="{% url 'index' %}"
-                  role="button"
-                  >Regresar</a"
-              ></a>
+            <a
+                name=""
+                id=""
+                class="btn btn-primary bg-gradient btn-lg"
+                href="{% url 'index' %}"
+                role="button"
+                >Enviar</a"
+            ></a>
+            <a
+                name=""
+                id=""
+                class="btn btn-success bg-gradient btn-lg"
+                href="{% url 'index' %}"
+                role="button"
+                >Regresar</a"
+            ></a>
           </form>
       </div>
   </div>
