--- a/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/postulantes/formulario.html
@@ -5,13 +5,18 @@
 <div class="container mb-5 mt-5" id="container">
   <div class="card text-start mx-auto" style="width: 30rem;">
       <div class="card-body">
-          <h4 class="card-title">Formulario de registro</h4>
+          <h4 class="card-title">Formulario de registro POSTULANTE</h4>
           <p class="card-text">Ingresa tus datos:</p>
 
           <form enctype="multipart/form-data" method="post">
             <link rel="stylesheet" href="{% static 'css/formP.css' %}">
 
             {% csrf_token %}
+            {{ form }}
+             
+              <label for="fecha_nacimiento">Fecha de nacimiento</label>
+              <input type="date">
+                
             {{ form }}
             
             <a
