Actualización rama MAIN 17/06/2024 modificación index.html y adición de index.css y urls de botones

--- a/BEEL/home/templates/home/welcome.html
+++ b/BEEL/home/templates/home/welcome.html
@@ -28,7 +28,7 @@
         <section class="hero">
             <h1 class="animate__fadeInDown">Bienvenidos a Equidad Laboral</h1>
             <p class="animate__fadeInUp">Somos una bolsa de empleo donde empresas inclusivas publican sus ofertas laborales y personas con cierta discapacidad puedan encontrar su trabajo ideal.</p>
-            <a href="{% url 'index' %}" class="btn animate__fadeInUp">REGISTRATE</a>
+            <a href="{% url 'index' %}" class="btn animate__fadeInUp">Registrate ahora</a>
         </section>
 
         <section class="features">
