--- a/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
@@ -2,49 +2,28 @@
 {% load static %}
 {% block content %}
 
-        <div class="p-5 mb-5  rounded-3">
-            <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold">Bienvenidos al registro de Equidad Laboral</h1>
-                <p class="col-md-8 fs-4">
-                    En este sistema podrá registrarse e iniciar sesión como postulante y/o empresa.
-                </p>
-                <a
-                name=""
-                id=""
-                class="btn btn-primary bg-gradient btn-lg"
-                href="{% url 'login' %}"
-                role="button"
-                >Iniciar sesión</a"
-                ></a>
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<body>
+  <section class="registro">
+    <div class="contenedor-registro">
+      <h2>Bienvenido al registro de Equidad Laboral</h2>
+      <p>Tu espacio para encontrar oportunidades laborales que se ajusten a tus necesidades.</p>
 
-                <a
-                name=""
-                id=""
-                class="btn btn-secondary bg-gradient btn-lg"
-                href="{% url 'formularioEmpresa' %}"
-                role="button"
-                >Registrate como empresa</a"
-                ></a>
-    
-                <a
-                name=""
-                id=""
-                class="btn btn-secondary bg-gradient btn-lg"
-                href="{% url 'formularioPostulante' %}"
-                role="button"
-                >Registrate como postulante</a"
-                ></a>
-    
-                <a
-                name=""
-                id=""
-                class="btn btn-success bg-gradient btn-lg"
-                href="{% url 'welcome' %}"
-                role="button"
-                >Regresar</a"
-                ></a>
-            </div>
-        </div>
+      <div class="botones-registro">
+        <a href="{% url 'formularioPostulante' %}" class="btn btn-postulante">Regístrate como postulante</a>
+        <a href="{% url 'formularioEmpresa' %}" class="btn btn-empresa">Regístrate como empresa</a>
+        <a href="{% url 'login' %}" class="btn btn-iniciar-sesion">Iniciar sesión</a>
+      </div>
+
+      <a href="{% url 'welcome' %}" class="btn btn-regresar">Regresar</a>
+    </div>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
 
 
 {% endblock %}
