--- a/BEEL/home/static/css/welcome.css
+++ b/BEEL/home/static/css/welcome.css
@@ -69,12 +69,17 @@ header nav ul li a {
 
 .btn {
   display: inline-block;
-  padding: 0.5rem 1rem;
+  padding: 15px 30px;
   background: #28a745; /* Botón verde */
   color: white;
   text-decoration: none;
   border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 1.3rem;
 }
+
+
 
 .features {
   padding: 2rem 1rem;
@@ -223,3 +228,4 @@ footer {
       opacity: 1;
   }
 }
+
